@@ -1,7 +1,8 @@
 Changes in quota-tools from 3.08 to 3.09
 * fixed minor bug in documentation (Jan Kara, Lucas Brasilino)
 * repquota(8) handles multiple entries in /etc/passwd better (Jan Kara)
-* made tools not to touch mountpoints mounted without quota options (Jan Kara, Paul Szabo)
+* made tools not to touch mountpoints mounted without quota options (Jan Kara)
+* added option for ignoring autofs mountpoints to quota(1), quot(8) and repquota(8) (Jan Kara, Paul Szabo)
 
 Changes in quota-tools from 3.07 to 3.08
 * Fixed infinite loop in quotacheck under RH7.1 (?)
